--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,39 @@
 body{
-    padding-top: 0%;  
-    padding-bottom: 0%;
-    width: auto;
-    height: 650px;
     background-image: url("../img/kanto-map.jpeg");
     background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
 .img-pokedex {
+    margin-top: 20px;
     width: 300px;
     height: 200px;
 
+}
+
+.link {
+    margin-left: 20px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: 'Press Start 2P';
+}
+
+.titulo {
+    padding: 5px;
+    color: white;
+    font-family: 'Press Start 2P';
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    height: 55px;
+    width: 250px;
+    margin: auto;
+}
+
+span {
+    margin-top: 20px;
+    margin: auto;
+    font-size: 30px;
+    text-align: center;
 }
